--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Released LumoOS</h1>
     <p>This vb os is pretty cool! Try it <a href="downloadlumo.html">here.</a></p>
     <hr>
-    <h1>LumoOS App Maker</h1>
-    <p>This is for batch, exe files, all of them. Download it <a href="downloadmaker.html">here.</a></p>
+    <h1>LumoOS App Utility</h1>
+    <p>This is for a user to make and install packages. Download it <a href="downloadlumoe.html">here.</a></p>
   </body>
 </html>
