Lets go finally

--- a/downloadlumoe.html
+++ b/downloadlumoe.html
@@ -11,6 +11,6 @@
     <h1>Essentials</h1>
     <hr />
     <h1>For RC1</h1>
-    <p></p>
+    <p>Download <a href="LumoEssentials.zip">here</a></p>
   </body>
 </html>
