--- a/downloadlumo.html
+++ b/downloadlumo.html
@@ -10,6 +10,9 @@
   <body>
     <h1>LumoOS Download Center</h1>
     <hr>
+    <h1>Release Canidate 2</h1>
+    <p>Added an app and fixed some bugs. Download <a href="https://www.mediafire.com/file/tchvbhdf7dlf73l/RC2.zip/file">here.</a></p>
+    <hr>
     <h1>Release Canidate 1</h1>
     <p><a href="https://www.mediafire.com/file/2ripelcgfbny2hr/RC1.zip/file">Download here</a></p>
   </body>
