--- a/downloadlumo.html
+++ b/downloadlumo.html
@@ -1,19 +1,56 @@
-<html>
-  <head>
-    <title>LumoOS Download Center</title>
-    <style>
-      :root {
-        font-family: "Arial";
-      }
-    </style>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LumoOS Download Center</title>
+  <style>
+    body {
+      font-family: "Arial", sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #f0f0f0;
+      padding: 10px;
+      text-align: center;
+    }
+    main {
+      padding: 20px;
+    }
+    h1 {
+      margin-top: 0;
+    }
+    hr {
+      margin: 20px 0;
+    }
+    p {
+      margin: 10px 0;
+    }
+    a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <header>
     <h1>LumoOS Download Center</h1>
+  </header>
+  <main>
+    <section>
+      <h2>Release Candidate 2</h2>
+      <p>Added an app and fixed some bugs. Download <a href="https://www.mediafire.com/file/tchvbhdf7dlf73l/RC2.zip/file">here.</a></p>
+    </section>
     <hr>
-    <h1>Release Canidate 2</h1>
-    <p>Added an app and fixed some bugs. Download <a href="https://www.mediafire.com/file/tchvbhdf7dlf73l/RC2.zip/file">here.</a></p>
-    <hr>
-    <h1>Release Canidate 1</h1>
-    <p><a href="https://www.mediafire.com/file/2ripelcgfbny2hr/RC1.zip/file">Download here</a></p>
-  </body>
+    <section>
+      <h2>Release Candidate 1</h2>
+      <p><a href="https://www.mediafire.com/file/2ripelcgfbny2hr/RC1.zip/file">Download here</a></p>
+    </section>
+  </main>
+</body>
 </html>
