REVAMP index.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,56 @@
-<html>
-  <head>
-    <title>Lumosify Software Center</title>
-    <style>
-      :root {
-        font-family: "Arial";
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Lumosify home page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lumosify's Software Center</title>
+  <style>
+    body {
+      font-family: "Arial", sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #f0f0f0;
+      padding: 10px;
+      text-align: center;
+    }
+    main {
+      padding: 20px;
+    }
+    h1 {
+      margin-top: 0;
+    }
+    hr {
+      margin: 20px 0;
+    }
+    p {
+      margin: 10px 0;
+    }
+    a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Lumo Download Center</h1>
+  </header>
+  <main>
+    <section>
+      <h2>LumoOS</h2>
+      <p>A very cool v OS. Download <a href="downloadlumo.html">here.</a></p>
+    </section>
     <hr>
-    <h1>Released LumoOS</h1>
-    <p>This vb os is pretty cool! Try it <a href="downloadlumo.html">here.</a></p>
-    <hr>
-    <h1>LumoOS App Utility</h1>
-    <p>This is for a user to make and install packages. Download it <a href="downloadlumoe.html">here.</a></p>
-  </body>
+    <section>
+      <h2>LumoEssentials</h2>
+      <p><a href="downloadlumoe.html">Download here</a></p>
+    </section>
+  </main>
+</body>
 </html>
