--- a/downloadlumoe.html
+++ b/downloadlumoe.html
@@ -1,16 +1,52 @@
-<html>
-  <head>
-    <title>LumoOS Essentials Download</title>
-    <style>
-      :root {
-        font-family: "Arial";
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Essentials</h1>
-    <hr />
-    <h1>For RC1</h1>
-    <p>Download <a href="LumoEssentials.zip">here</a></p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LumoOS Download Center</title>
+  <style>
+    body {
+      font-family: "Arial", sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #f0f0f0;
+      padding: 10px;
+      text-align: center;
+    }
+    main {
+      padding: 20px;
+    }
+    h1 {
+      margin-top: 0;
+    }
+    hr {
+      margin: 20px 0;
+    }
+    p {
+      margin: 10px 0;
+    }
+    a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>LumoOS Download Center</h1>
+  </header>
+  <main>
+    <section>
+      <h2>Download link</h2>
+      <p>Download <a href="LumoEssentials.zip">here.</a></p>
+    </section>
+    <hr>
+  </main>
+</body>
 </html>
