--- a/downloadlumo.html
+++ b/downloadlumo.html
@@ -48,6 +48,10 @@
     </section>
     <hr>
     <section>
+      <h2>Release Candidate 3</h2>
+      <p>Added settings, wallpapers, users, and a bit more. Download <a href="https://www.mediafire.com/file/mx0jafocvetacl7/RC3.zip/file">here</a></p>
+    </section>
+    <section>
       <h2>Release Candidate 2</h2>
       <p>Added an app and fixed some bugs. Download <a href="https://www.mediafire.com/file/tchvbhdf7dlf73l/RC2.zip/file">here.</a></p>
     </section>
