--- a/downloadlumo.html
+++ b/downloadlumo.html
@@ -48,6 +48,11 @@
     </section>
     <hr>
     <section>
+      <h2>Prerelease</h2>
+      <p>Bugfixes everywhere, boot screen, fullscreen login, USB detection, and a media player. Download <a href="https://www.mediafire.com/file/9hqold4d4yovgeo/1.0PR.zip/file">here</a></p>
+    </section>
+    <hr>
+    <section>
       <h2>Release Candidate 3</h2>
       <p>Added settings, wallpapers, users, and a bit more. Download <a href="https://www.mediafire.com/file/mx0jafocvetacl7/RC3.zip/file">here</a></p>
     </section>
